fix safari body overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ select::-ms-expand {
 }
 
 .modal-open {
+  position: relative;
   overflow: hidden;
 }
 
